# secure_url

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  env_example  pyproject.toml  requirements.txt
app/secure_url/: Procfile  manage.py  procfile
app/secure_url/secure_resource/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
app/secure_url/secure_resource/migrations/: 0001_initial.py  0002_fileredirect_urlredirect.py  0003_auto_20201121_1425.py
app/secure_url/secure_resource/templates/: detail.html
app/secure_url/secure_url/: settings.py  urls.py
app/secure_url/user_agent/: admin.py  middleware.py
app/secure_url/user_agent/migrations/: 0001_initial.py
app/secure_url/users/migrations/: 0001_create_default_user.py
app/tests/: test_secure_url_endpoints.py
app/tests/fixtures/: fixtures.json
secure_url/: manage.py  procfile  requirements.txt
secure_url/secure_resource/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
secure_url/secure_resource/api/: routes.py  serializers.py  views.py
secure_url/secure_resource/api/resources/: permissions.py  serializers.py  views.py
secure_url/secure_resource/migrations/: 0004_auto_20201121_1610.py  0005_auto_20201121_1638.py
secure_url/secure_resource/templates/: create.html  detail.html  home.html  redirect.html
secure_url/secure_url/: asgi.py  settings.py  urls.py  wsgi.py
secure_url/templates/registration/: login.html
secure_url/user_agent/: apps.py  models.py
(+4 files in other folders)
