[tool.poetry]
name = "secure-url"
version = "0.1.0"
description = ""
authors = ["Bartek Krzys <bartek.krzys@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
